--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+
 :root {
-    --primary-color: #8A2BE2;
-    --secundary-color: #EE82EE;
-    --tertiary-color: #6591EB;
+    --primary-color: #000e8b;
+    --secondary-color: #7AE9FF;
+    --tertiary-color: #26C73B;
+    --quaternary-color: #E6E650;
     --background-color: #F0F8FF;
     --text-color: #F0F8FF;
     --dark-text-color: #000;
@@ -12,20 +16,14 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    scroll-behavior: smooth;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
 body {
+    background-color: var(--background-color);
     color: var(--text-color);
-}
-
-header {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    color: var(--dark-text-color);
 }
 
 .tests {
@@ -34,12 +32,13 @@ header {
     justify-content: center;
     width: 100%;
     height: 200px;
+    margin-bottom: 7rem;
 }
 
 .tests .box-colors {
     display: flex;
-    width: 40%;
-    height: 100%;
+    width: 53%;
+    height: 200px;
     font-size: 1.1rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 1px solid #000;
@@ -47,16 +46,16 @@ header {
 
 .tests .box-colors .primary-color {
     background-color: var(--primary-color);
-    width: 25%;
+    width: 20%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.tests .box-colors .secundary-color {
-    background-color: var(--secundary-color);
-    width: 25%;
+.tests .box-colors .secondary-color {
+    background-color: var(--secondary-color);
+    width: 20%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -65,7 +64,16 @@ header {
 
 .tests .box-colors .tertiary-color {
     background-color: var(--tertiary-color);
-    width: 25%;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tests .box-colors .quaternary-color {
+    background-color: var(--quaternary-color);
+    width: 20%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -74,7 +82,7 @@ header {
 
 .tests .box-colors .background-color {
     background-color: var(--background-color);
-    width: 25%;
+    width: 20%;
     height: 100%;
     display: flex;
     align-items: center;
