--- a/styles/global.css
+++ b/styles/global.css
@@ -2,10 +2,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 :root {
-    --primary-color: #000e8b;
-    --secondary-color: #7AE9FF;
-    --tertiary-color: #26C73B;
-    --quaternary-color: #E6E650;
+    --primary-color: #6a29e9;
+    --secondary-color: #00bfff;
+    --tertiary-color: #000850;
+    --quaternary-color: #26C73B;
     --background-color: #F0F8FF;
     --text-color: #F0F8FF;
     --dark-text-color: #000;
