--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
     --primary-color: #6a29e9;
     --secondary-color: #00bfff;
     --tertiary-color: #000850;
-    --quaternary-color: #26C73B;
+    --quaternary-color: #ffec00;
     --background-color: #F0F8FF;
     --text-color: #F0F8FF;
     --dark-text-color: #000;
