--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
     --primary-color: #6a29e9;
     --secondary-color: #00bfff;
     --tertiary-color: #000850;
-    --quaternary-color: #ffec00;
+    --quaternary-color: #26c73B;
     --background-color: #F0F8FF;
     --text-color: #F0F8FF;
     --dark-text-color: #000;
@@ -18,7 +18,6 @@
     box-sizing: border-box;
     text-decoration: none;
     scroll-behavior: smooth;
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-family: 'noto sans', sans-serif;
 }
 
