--- a/styles/index.css
+++ b/styles/index.css
@@ -130,59 +130,107 @@ main .containers {
     margin-bottom: 5rem;
 }
 
+/* BANNER */
+
+.interface {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 4%;
+}
+
+.banner {
+  height: 90vh;
+  position: relative;
+}
+
+.banner .banner-container .banner-itens {
+  position: absolute;
+  inset: 0;
+  overflow: hidden;
+}
+
+.banner .banner-itens img {
+  width: 100%;
+  height: 100%;
+
+}
+
+.texto-banner {
+  position: absolute;
+  left: 7%;
+  top: 35%;
+  z-index: 1;
+  width: 60%;
+}
+
+.texto-banner h2 {
+  font-size: 3rem;
+}
+
+.texto-banner h2 span {
+  color: var(--quaternary-color);
+}
+
+.texto-banner p {
+  margin-bottom: 2rem;
+}
+
 .container {
+  padding: 2.5rem;
+}
+
+.background-box {
   display: flex;
   justify-content: center;
   align-items: stretch;
   padding: 40px;
   gap: 40px;
+  background: linear-gradient(180deg,rgb(79, 32, 172) 35%, rgba(122, 233, 255, 1) 100%);
+  border-radius: 30px;
 }
 
-.left-box {
-  background-color: #6a29e9;
-  color: #fff;
+.right-box {
   width: 50%;
   height: 25rem;
-  border-radius: 12px;
   padding: 30px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.left-box h1 {
+.right-box h1 {
   font-size: 2rem;
   margin-bottom: 25px;
   font-weight: 700;
 }
 
-.left-box p {
+.right-box p {
   line-height: 1.6;
   font-size: 1rem;
   opacity: 0.9;
   margin-bottom: 40px;
 }
 
-.left-box .box-buttons{
+.right-box .box-buttons{
   width: 100%;
   display: flex;
   gap: .5rem;
 }
 
 .btn {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: var(--text-color);
   text-decoration: none;
   padding: 15px 30px;
   border-radius: 10px;
   font-weight: 600;
-  transition: background 0.3s ease;
+  transition: background 0.5s ease;
   text-align: center;
   max-width: 200px;
 }
 
 .btn:hover {
-  background-color: #00a0d1;
+  background-color: #6128d3;
 }
 
 .btn1 {
@@ -193,47 +241,57 @@ main .containers {
   background-color: rgb(194, 22, 22);
 }
 
-.right-box {
+.left-box {
+  background-color: #6a29e9;
+  border-radius: 30px;
   flex: 1;
   padding: 30px 20px;
 }
 
-.right-box h3 {
+.left-box h3 {
   font-size: 1rem;
   font-weight: 700;
-  color: #333;
   margin-bottom: 10px;
 }
 
-.right-box h2 {
+.left-box h2 {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 20px;
 }
 
 .intro {
-  color: #555;
   line-height: 1.6;
   margin-bottom: 30px;
 }
 
 .features {
   display: flex;
-  gap: 60px;
-  flex-wrap: wrap;
+  gap: 50px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .features ul {
   list-style: none;
+  text-align: center;
 }
 
-.features li {
+.features ul li {
+  background-color: var(--quaternary-color);
+  border-radius: 30px;
+  padding: 10px;
   margin-bottom: 15px;
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
+  font-size: .9rem;
+  font-weight: 600;
   gap: 10px;
-  color: var(--dark-text-color);
+  color: var(--text-color);
+  transition: background 0.5s ease;
+}
+
+.features ul li:hover {
+  background-color: #1eb532;
 }
 
 @media (max-width: 900px) {
@@ -271,7 +329,7 @@ main .containers {
   gap: 3rem;
   margin-inline: 4%;
   margin-bottom: 3rem;
-
+  z-index: 1;
 }
 
 .card {
