--- a/styles/index.css
+++ b/styles/index.css
@@ -175,6 +175,59 @@ main .containers {
   margin-bottom: 2rem;
 }
 
+.info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.info-content {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.info-text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  flex: 1;
+}
+
+.info-card {
+  background: var(--quaternary-color);
+  border-radius: 12px;
+  width: 40rem;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  padding: 15px 25px;
+  overflow: hidden;
+  max-height: 60px;
+}
+
+.info-card p {
+ display: none;
+}
+
+.info-card.active {
+  background: var(--primary-color);
+  max-height: 200px;
+}
+
+.info-card.active p {
+  display: block;
+}
+
+.info-card h3 {
+  margin-bottom: 10px;
+}
+
+.info-image img {
+  width: 37rem;
+  transition: all 0.4s ease;
+}
+
 .container {
   padding: 2.5rem;
 }
@@ -291,7 +344,7 @@ main .containers {
 }
 
 .features ul li:hover {
-  background-color: #1eb532;
+  background-color: #1db031;
 }
 
 @media (max-width: 900px) {
