--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 /* CABEÇALHO COM LOGO, MENU DE NAVEGAÇÃO E BOTAO DE ENTRAR */
 header {
   width: 100%;
-  padding: 25px 4%;
+  padding: 3px 4%;
   position: fixed;
   z-index: 2;
   top: 0;
@@ -14,11 +14,7 @@ header {
 
 header.rolagem {
   background-color: var(--secondary-color);
-  padding: 20px 7%;
-}
-
-.box-header {
-  margin: auto;
+  padding: 0px 7%;
 }
 
 .flex {
@@ -124,12 +120,6 @@ header.rolagem .btn-entrar:hover {
   color: var(--laranja-bg);
 }
 
-main .containers {
-    width: 100%;
-    min-height: 30rem;
-    margin-bottom: 5rem;
-}
-
 /* BANNER */
 
 .interface {
@@ -152,7 +142,7 @@ main .containers {
 .banner .banner-itens img {
   width: 100%;
   height: 100%;
-
+  
 }
 
 .texto-banner {
@@ -173,6 +163,12 @@ main .containers {
 
 .texto-banner p {
   margin-bottom: 2rem;
+}
+
+main .containers {
+  width: 100%;
+  min-height: 30rem;
+  padding-top: 8rem;
 }
 
 .info {
@@ -199,20 +195,20 @@ main .containers {
   background: var(--quaternary-color);
   border-radius: 12px;
   width: 40rem;
+  height: 3rem;
   cursor: pointer;
   transition: all 0.5s ease;
   padding: 15px 25px;
-  overflow: hidden;
-  max-height: 60px;
 }
 
 .info-card p {
- display: none;
+  font-size: .85rem;
+  display: none;
 }
 
 .info-card.active {
   background: var(--primary-color);
-  max-height: 200px;
+  height: fit-content;
 }
 
 .info-card.active p {
@@ -221,6 +217,7 @@ main .containers {
 
 .info-card h3 {
   margin-bottom: 10px;
+  font-size: 1rem;
 }
 
 .info-image img {
@@ -364,13 +361,18 @@ main .containers {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   flex-direction: column;
-  margin-bottom: 5rem;
+  margin-bottom: 6rem;
 }
 
 .titulos_containers h2 {
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   color: var(--tertiary-color);
+}
+
+.titulos_containers h2 span {
+  color: var(--quaternary-color);
 }
 
 .card-list {
@@ -521,12 +523,8 @@ main .containers {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10rem;
 }
-
-/* .apoiadores-carl .box-icons-apoio {
-    display: flex;
-
-} */
 
 .apoiadores-carl .box-icons-apoio {
     display: flex;
@@ -535,8 +533,12 @@ main .containers {
 }
 
 .box-icons-apoio img {
-    width: 12rem;
-    transition: 0.4s ease;
+  width: 12rem;
+  transition: 0.4s ease;
+}
+
+.box-icons-apoio .img_ete {
+  width: 8.5rem;
 }
 
 .box-icons-apoio img:hover {
