fix: ajustes na img, paragrafo, icons da section professores

--- a/styles/index.css
+++ b/styles/index.css
@@ -415,12 +415,15 @@ main .containers {
   max-width: 90%;
 }
 
+.professores .box_professor .text_professor p span {
+  font-weight: bold;
+}
+
 .professores .box_professor img {
+  align-self: center;
   width: 17rem;
+  height: 17rem;
   transition: 0.7s ease;
-  object-fit: cover;
-  border-radius: 15px;
-  flex-shrink: 0; /* Para que a imagem não mude de tamanho */
 }
 
 .professores .box_professor img:hover {
@@ -431,30 +434,18 @@ main .containers {
 .professores .social-icons {
   margin-top: 1rem;
   display: flex;
-  align-items: center; /* keeps SVG aligned with font icons */
-  gap: 1rem;
+  align-items: center;
 }
 
-/* SVG icons */
-.professores .social-icons .social-icon {
-  width: 2rem;
-  height: 2rem;
-  object-fit: contain;
-  transition:
-    transform 0.2s ease,
-    filter 0.3s ease;
-
-  /* Convert black to tertiary color */
-  filter: invert(8%) sepia(100%) saturate(2000%) hue-rotate(230deg)
-    brightness(20%) contrast(100%);
+.professores .social-icons .btn-sociais .bi {
+  font-size: 1.8rem;
+  color: var(--tertiary-color);
+  transition: 0.3s;
+  margin-right: 9px;
 }
 
-.professores .social-icons a:hover .social-icon {
-  transform: scale(1.2);
-
-  /* Convert black to primary color */
-  filter: invert(25%) sepia(90%) saturate(2000%) hue-rotate(250deg)
-    brightness(90%) contrast(90%);
+.professores .social-icons .btn-sociais i:hover {
+  color: var(--quaternary-color);
 }
 
 /* BOLSISTAS */
