refactor: nova section info dos artigos

--- a/styles/index.css
+++ b/styles/index.css
@@ -179,63 +179,99 @@ main .containers {
   width: 50%;
 }
 
-.info {
+/* ARTIGOS */
+.artigos-relacionados-section {
+  max-width: 1300px;
+  margin: 80px auto;
+  padding: 0 20px;
+  font-family: "Poppins", sans-serif;
+}
+
+.artigos-relacionados-titulo {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.artigos-relacionados-container {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
   justify-content: center;
-  align-items: center;
-  gap: 50px;
 }
 
-.info-content {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.info-text {
+.artigo-relacionado-item {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  flex: 1;
-}
-
-.info-card {
-  background: var(--quaternary-color);
+  background: #fff;
   border-radius: 12px;
-  width: 40rem;
-  height: 3rem;
-  cursor: pointer;
-  transition: all 0.5s ease;
-  padding: 15px 25px;
+  overflow: hidden;
+  width: 325px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease, box-shadow 0.2s ease;
 }
 
-.info-card p {
-  font-size: .9rem;
-  display: none;
+.artigo-relacionado-item:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
 }
 
-.info-card p a {
-  color: #000;
-  background-color: #ffffff99;
-}
-
-.info-card.active {
+.artigo-relacionado-item:hover .artigo-relacionado-link {
   background: var(--primary-color);
-  height: fit-content;
+  color: #fff;
 }
 
-.info-card.active p {
+.artigo-relacionado-img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.artigo-relacionado-conteudo {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.artigo-relacionado-tag {
+  background: var(--primary-color);
+  color: #fff;
+  font-size: 0.85rem;
+  padding: 6px 16px;
+  border-radius: 20px;
+  align-self: flex-start;
+  font-weight: 500;
+}
+
+.artigo-relacionado-subtitulo {
+  color: var(--tertiary-color);
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin: 16px 0 10px;
+  line-height: 1.4;
+}
+
+.artigo-relacionado-info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.9rem;
+  color: #6c6c6c;
+  margin-bottom: 15px;
+}
+
+.artigo-relacionado-link {
+  background: #f0e9ff;
+  color: var(--primary-color);
+  font-weight: 600;
+  text-decoration: none;
+  text-align: center;
+  padding: 12px;
+  border-radius: 8px;
+  transition: all 0.2s ease;
   display: block;
-}
-
-.info-card h3 {
-  margin-bottom: 10px;
-  font-size: 1rem;
-}
-
-.info-image img {
-  width: 37rem;
-  transition: all 0.4s ease;
 }
 
 .container {
