--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
     --quaternary-color: #26c73B;
     --background-color: #F0F8FF;
     --text-color: #F0F8FF;
-    --dark-text-color: #000;
+    --dark-text-color: #2d2d2d;
 }
 
 * {
