--- a/styles/index.css
+++ b/styles/index.css
@@ -460,6 +460,7 @@ main .containers {
 }
 
 .professores .box_professor .text_professor p {
+  text-align: justify;
   font-size: .85rem;
   padding-top: 1rem;
   max-width: 90%;
@@ -751,19 +752,41 @@ main .containers {
   padding: 30px;
   width: 90%;
   max-width: 500px;
-  text-align: center;
+  text-align: center; /* mantém centralizado o título e imagem */
   position: relative;
   animation: fadeIn 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px; /* separa automaticamente os elementos internos */
 }
 
+/* Imagem do bolsista */
 .modal-content img {
   width: 120px;
   height: 120px;
   object-fit: cover;
   border-radius: 50%;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
+/* Nome */
+#modal-nome {
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+/* Descrição */
+#modal-descricao {
+  text-align: justify;      /* justifica o texto da descrição */
+  line-height: 1.5;      /* melhora a legibilidade */
+  font-size: 0.90rem;
+  font-weight: 400;
+  white-space: normal;
+}
+
+/* Botão de fechamento */
 .close {
   position: absolute;
   top: 15px;
@@ -777,7 +800,6 @@ main .containers {
   from { opacity: 0; transform: scale(0.9); }
   to { opacity: 1; transform: scale(1); }
 }
-
 
 /* Responsivo */
 @media (max-width: 900px) {
