--- a/styles/index.css
+++ b/styles/index.css
@@ -472,8 +472,8 @@ main .containers {
 
 .professores .box_professor img {
   align-self: center;
-  width: 17rem;
-  height: 17rem;
+  width: 18rem;
+  height: 18rem;
   transition: 0.7s ease;
 }
 
@@ -501,78 +501,6 @@ main .containers {
 
 /* BOLSISTAS */
 
-.container_bolsistas {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 1 300px;
-  flex-wrap: wrap;
-  gap: 3rem;
-  margin-inline: 4%;
-  max-width: 80vw;
-}
-
-.card {
-  width: 300px;
-  height: 185px;
-  display: block;
-  background-color: #fff;
-  padding: 22px 18px;
-  border-radius: 12px;
-  box-shadow: 0 3px 3px rgba(122, 233, 255, .3);
-  transition: 0.4s ease;
-}
-
-.card:hover {
-  transform: translateY(-7px);
-}
-
-.card-img {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: 1rem;
-}
-
-.card-img div h4 {
-    color: var(--dark-text-color);
-}
-
-.card-img div p {
-    color: var(--dark-text-color);
-}
-
-.card-img img {
-  width: 6rem;
-  height: 6rem;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.card-content {
-  position: relative;
-  width: 100%;
-}
-
-.card-content h3 {
-  padding: 4px 16px;
-  font-size: 0.82rem;
-  font-weight: 500;
-  width: fit-content;
-  border-radius: 50px;
-  position: absolute;
-  top: .5rem;
-  left: 0rem;
-}
-
 .card-content h3.badge1 {
   color: #5370f0;
   background: #dde4ff;
@@ -598,17 +526,171 @@ main .containers {
   background: #ffe8d6;
 }
 
-.card-content p {
-  color: #000;
-  font-size: 0.8rem;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
+/* BOLSISTAS */
+
+.section-equipe {
+  text-align: center;
+  padding: 5rem 1rem;
 }
 
-.card-content h4 {
-  color: #000;
-  font-weight: 800;
+.section-equipe .box {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
 }
+
+.section-equipe .box .box-equipe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.section-equipe .box .box-equipe h2 {
+  color: var(--tertiary-color);
+}
+
+.section-equipe .box .box-equipe h2 .bi {
+  color: #ffd858;
+}
+
+.section-equipe .box .box-equipe span {
+  color: var(--quaternary-color);
+}
+
+.section-equipe .box .descricao-equipe {
+  width: 50vh;
+  height: 20rem;
+  background-color: var(--primary-color);
+}
+
+.carrossel-equipe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 31rem;
+  gap: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.seta {
+  z-index: 999;
+  background-color: transparent;
+  border: none;
+  font-size: 2.5rem;
+  color: #888;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  position: absolute;
+}
+
+.seta.esquerda {
+  top: 50%;
+  left: 40px;
+}
+
+.seta.direita {
+  top: 50%;
+  right: 40px;
+}
+
+.seta:hover {
+  color: #000;
+}
+
+.equipe-fotos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15rem;
+  gap: 1rem;
+}
+
+.foto-container {
+  position: relative;
+  transition: transform 0.4s ease, opacity 0.4s ease;
+}
+
+.foto-container:not(.destaque) {
+  opacity: 0.8;
+  transform: scale(0.9);
+}
+
+.foto-container .nome-integrante {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--secondary-color);
+  font-size: .8rem;
+  padding: 4px 9px;
+  border-radius: 20px;
+  white-space: nowrap;
+}
+
+.foto-container.destaque .foto {
+  width: 180px;
+  height: 180px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  transform: scale(1.1);
+}
+
+.foto-container.destaque .nome-integrante {
+  font-size: .9rem;
+}
+
+.foto {
+  width: 140px;
+  height: 140px;
+  position: relative;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.foto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.barras-coloridas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 3rem;
+}
+
+.barra {
+  width: 70px;
+  height: 15px;
+  border-radius: 30px;
+  display: inline-block;
+}
+
+.lilas { background-color: #cbb8ff; }
+.amarela { background-color: #ffe259; }
+.rosa { background-color: #85ee93; }
+.azul { background-color: #9dd6ff; }
+.roxa { background-color: #b88cff; }
+
+@media (max-width: 768px) {
+  .equipe-fotos {
+    gap: 1rem;
+  }
+  .foto {
+    width: 100px;
+    height: 100px;
+  }
+  .foto.destaque {
+    width: 140px;
+    height: 140px;
+  }
+}
+
+/* APOIADORES DO PROJETO */
 
 .apoiadores {
     display: flex;
