--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@ header {
   width: 100%;
   padding: 3px 4%;
   position: fixed;
-  z-index: 2;
+  z-index: 999;
   top: 0;
   left: 0;
   transition: 0.7s;
@@ -566,11 +566,11 @@ main .containers {
 }
 
 .seta {
-  z-index: 999;
+  z-index: 10;
   background-color: transparent;
   border: none;
   font-size: 2.5rem;
-  color: #ffffffa0;
+  color: #ffffffac;
   cursor: pointer;
   transition: color 0.3s ease;
   position: absolute;
@@ -691,11 +691,93 @@ main .containers {
   white-space: nowrap;
 }
 
-.bolsistas .bolsistas-saiba-mais {
+.blocos-usuarios {
   width: 100%;
-  min-height: 140px;
+  padding: 3.5rem 1rem;
   margin-top: 6rem;
-  background: linear-gradient(120deg, var(--primary-color)45%, var(--secondary-color));;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(120deg, var(--primary-color)25%, var(--secondary-color));
+}
+
+.blocos-usuarios-container {
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.usuarios-lista {
+  display: flex;
+  align-items: center;
+}
+
+.usuarios-lista img {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  margin-left: -12px;
+  object-fit: cover;
+  border: 3px solid #fff;
+}
+
+.botao-mais {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  margin-left: -12px;
+  background-color: #fff;
+  color: var(--primary-color);
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.texto-blocos {
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.box-saiba-mais {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.4rem;
+}
+
+.box-saiba-mais a {
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: 8rem;
+  color: var(--text-color);
+  background-color: var(--quaternary-color);
+  padding: 5px 7px;
+  border-radius: 5px;
+  transition: .3s ease;
+}
+
+.box-saiba-mais a:hover {
+  background-color: #18b32d;
+}
+
+/* RESPONSIVO */
+@media (max-width: 768px) {
+  .blocos-usuarios-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .texto-blocos {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1.2rem;
+  }
 }
 
 @media (max-width: 768px) {
