--- a/styles/index.css
+++ b/styles/index.css
@@ -60,7 +60,7 @@ header ul li {
   position: relative;
   display: inline-block;
   margin: 0 20px;
-  transition: transform .5s ease;
+  
 }
 
 header ul li::after {
@@ -72,6 +72,7 @@ header ul li::after {
   height: 2.2px;
   background-color: var(--text-color);
   border-radius: 2px;
+  transition: .1s ease;
 }
 
 /* Manter expressura da borda na rolagem */
@@ -737,6 +738,13 @@ main .containers {
   border: 3px solid #fff;
   font-weight: bold;
   cursor: pointer;
+  transition: .3s ease;
+}
+
+.botao-mais:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+  border: 3px solid #fff;
 }
 
 .texto-blocos {
@@ -754,16 +762,28 @@ main .containers {
 .box-saiba-mais a {
   font-size: 1.1rem;
   font-weight: 600;
-  width: 8rem;
-  color: var(--text-color);
-  background-color: var(--quaternary-color);
-  padding: 5px 7px;
+  color: #fff;
   border-radius: 5px;
   transition: .3s ease;
+  position: relative;
+  display: inline-block;
+  transition: .5s ease;
 }
 
-.box-saiba-mais a:hover {
-  background-color: #18b32d;
+.box-saiba-mais a::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 60%;
+  height: 2.3px;
+  background-color: var(--text-color);
+  border-radius: 2px;
+  transition: .1s ease;
+}
+
+.box-saiba-mais a:hover::after {
+  width: 100%;
 }
 
 /* RESPONSIVO */
