--- a/styles/index.css
+++ b/styles/index.css
@@ -305,7 +305,7 @@ main .containers {
 
 .right-box h1 {
   font-size: 2rem;
-  margin-bottom: 25px;
+  margin-top: 80px;
   font-weight: 700;
 }
 
@@ -314,6 +314,7 @@ main .containers {
   font-size: 1rem;
   opacity: 0.9;
   margin-bottom: 40px;
+  margin-top: 30px;
 }
 
 .right-box .box-buttons{
