--- a/styles/artigos.css
+++ b/styles/artigos.css
@@ -1,5 +1,9 @@
 @import url("global.css");
 
+h1 span {
+  color: var(--quaternary-color);
+}
+
 header {
   width: 100%;
   background-color: var(--primary-color);
@@ -80,47 +84,19 @@ strong {
   gap: 30px;
   font-size: 0.95rem;
   color: #555;
-  margin-bottom: 15px;
-}
-
-.artigo-principal-audio {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background: #fff;
-  padding: 10px 15px;
-  border-radius: 25px;
-  width: fit-content;
-  margin-block: 3rem;
-}
-
-.artigo-principal-play {
-  border: none;
-  background: var(--primary-color);
-  color: #fff;
-  border-radius: 50%;
-  width: 28px;
-  height: 28px;
-  cursor: pointer;
-  font-size: 0.9rem;
-}
-
-.artigo-principal-barra {
-  width: 150px;
-}
-
-.artigo-principal-tempo {
-  font-size: 0.9rem;
-  color: #666;
+  margin-bottom: 3rem;
 }
 
 .artigo-principal-imagem {
-  width: 100%;
-  height: 40rem;
+  display: block;
+  margin: 2rem auto;
+  max-width: 90%;
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 40px;
   object-fit: cover;
+  border: 2px solid rgba(0,0,0,0.05);
+  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
 
 .artigo-principal-corpo h2 {
@@ -231,30 +207,4 @@ tbody tr:hover {
     flex-direction: column;
     gap: 5px;
   }
-
-  .artigo-principal-audio {
-    flex-wrap: wrap;
-  }
 }
-
-
-.imagem-centro {
-  display: block;
-  margin: 2rem auto;
-  border-radius: 1.2rem;
-  max-width: 90%;
-}
-
-.sombra {
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-}
-
-.borda-suave {
-  border: 2px solid rgba(0,0,0,0.05);
-}
-
-.bloco {
-  margin-bottom: 3rem;
-  line-height: 1.7;
-}
-
