--- a/styles/perfis.css
+++ b/styles/perfis.css
@@ -1,7 +1,12 @@
 @import url("global.css");
 
-h1 span {
-  color: var(--quaternary-color);
+#tech-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Fundo escuro elegante */
 }
 
 header {
@@ -48,8 +53,8 @@ header img {
 }
 
 .artigo-principal-section {
-  max-width: 1000px;
-  margin: 120px auto;
+  max-width: 90vw;
+  margin: 95px auto;
   padding: 0 20px;
   color: var(--dark-text-color);
 }
@@ -65,69 +70,66 @@ strong {
 
 .artigo-principal-titulo {
   font-size: 2.3rem;
-  color: var(--tertiary-color);
   font-weight: 700;
   margin-top: 15px;
   margin-bottom: 10px;
   line-height: 1.3;
 }
 
-.artigo-principal-subtitulo {
-  font-size: 1.1rem;
-  color: #444;
-  margin-bottom: 35px;
-}
-
-.artigo-principal-info {
+.artigo-principal-corpo {
   display: flex;
+  justify-content: center;
+  gap: 3.5rem;
   flex-wrap: wrap;
-  gap: 30px;
-  font-size: 0.95rem;
-  color: #555;
-  margin-bottom: 3rem;
 }
 
-.artigo-principal-imagem {
-  display: block;
-  margin: 2rem auto;
-  max-width: 90%;
-  border-radius: 10px;
-  margin-top: 10px;
-  margin-bottom: 40px;
+.artigo-principal-corpo .box-bolsista {
+  background-color: #fff;
+  max-width: 550px;
+  border-radius: 15px;
+  padding: 2rem;
+  text-align: justify;
+  border: 1px #c1c1c1 solid;
+  transition: .3s ease;
+}
+
+.artigo-principal-corpo .box-bolsista:hover {
+  transform: translateY(-10px);
+  border: 1px var(--secondary-color) solid;
+  /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.30); */
+}
+
+.foto {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+}
+
+.foto img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
   object-fit: cover;
-  border: 2px solid rgba(0,0,0,0.05);
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
 
-.artigo-principal-corpo h2 {
-  color: var(--tertiary-color);
-  font-size: 1.4rem;
+.box-bolsista h2 {
+  background: linear-gradient(155deg, var(--primary-color) 35%, var(--secondary-color));
+  width: fit-content;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  font-size: 1.3rem;
   margin-top: 35px;
   margin-bottom: 10px;
 }
 
-.artigo-principal-corpo h4 {
-  color: var(--tertiary-color);
-  font-size: 1.1rem;
-  margin-bottom: 10px;
-}
-
-.artigo-principal-corpo p {
+.box-bolsista p {
   line-height: 1.7;
-  font-size: 1rem;
+  font-size: .85rem;
   margin-bottom: 20px;
-}
-
-.artigo-principal-corpo .topicos {
-  list-style: "● ";
-  padding-left: 2rem;
-  margin: 0.8rem 0 1.5rem 0;
-  line-height: 1.7;
-}
-
-.artigo-principal-corpo .check {
-  list-style: "✅ ";
-  padding-left: 2.3rem;
 }
 
 /* Responsividade */
