--- a/styles/index.css
+++ b/styles/index.css
@@ -274,6 +274,7 @@ main .containers {
   font-weight: 600;
   text-decoration: none;
   text-align: center;
+  font-size: 0.83rem;
   padding: 12px;
   border-radius: 8px;
   transition: all 0.2s ease;
