--- a/styles/global.css
+++ b/styles/global.css
@@ -25,3 +25,12 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
 }
+
+#tech-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Fundo escuro elegante */
+}
