--- a/styles/index.css
+++ b/styles/index.css
@@ -756,6 +756,10 @@ main .containers {
   align-items: center;
 }
 
+.usuarios-lista:hover img {
+  opacity: 0.5;
+}
+
 .usuarios-lista img {
   width: 65px;
   height: 65px;
@@ -763,6 +767,13 @@ main .containers {
   margin-left: -12px;
   object-fit: cover;
   border: 3px solid #fff;
+  cursor: pointer;
+}
+
+.usuarios-lista img:hover {
+  opacity: 1;
+  transform: scale(1.05);
+  z-index: 1;
 }
 
 .botao-mais {
@@ -786,6 +797,7 @@ main .containers {
   background-color: var(--primary-color);
   color: #fff;
   border: 3px solid #fff;
+  z-index: 1;
 }
 
 .texto-blocos {
