--- a/styles/artigos.css
+++ b/styles/artigos.css
@@ -176,7 +176,7 @@ th, td {
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 tbody tr:hover {
@@ -188,7 +188,7 @@ tbody tr:hover {
   text-align: center;
 }
 
-.total-tabela th[colspan="3"] {
+.total-tabela td[colspan="3"] {
   font-weight: bold;
   text-align: left;
 }
