--- a/styles/perfis.css
+++ b/styles/perfis.css
@@ -128,6 +128,35 @@ strong {
   margin-bottom: 20px;
 }
 
+/* Redes sociais dos bolsistas */
+.bolsistas .social-icons {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.bolsistas .social-icons .btn-sociais .bi {
+  font-size: 1.8rem;
+  background: linear-gradient(155deg, var(--primary-color) 35%, var(--secondary-color));
+  background-clip: text;
+  color: transparent;
+  transition: 0.5s;
+  margin-right: 9px;
+}
+
+.bolsistas .social-icons .btn-sociais i:hover {
+  background: linear-gradient(155deg, var(--secondary-color) 35%, var(--primary-color));
+  background-clip: text;
+  color: transparent;
+}
+
+.nome-e-icones {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;  
+}
+
 /* Responsividade */
 @media (max-width: 768px) {
   .artigo-principal-titulo {
