--- a/styles/index.css
+++ b/styles/index.css
@@ -328,6 +328,7 @@ main .containers {
   transition: 0.5s ease;
   text-align: center;
   max-width: 200px;
+  white-space: nowrap;
 }
 
 .btn:hover {
@@ -387,6 +388,7 @@ main .containers {
   margin-bottom: 15px;
   font-size: .9rem;
   font-weight: 600;
+    white-space: nowrap;
   gap: 10px;
   cursor: pointer;
   color: var(--text-color);
@@ -452,7 +454,7 @@ main .containers {
 
 .professores .box_professor {
   display: flex;
-  width: 1000px;
+  max-width: 1000px;
   color: var(--tertiary-color);
   margin-bottom: 5rem;
 }
@@ -500,8 +502,8 @@ main .containers {
 
 .professores .box_professor img {
   align-self: center;
-  width: 18rem;
-  height: 18rem;
+  width: 30%;
+  height: 30%;
   transition: 0.7s ease;
 }
 
@@ -658,7 +660,7 @@ main .containers {
   justify-content: center;
   gap: 2rem;
   width: 28rem;
-  height: 23rem;
+
 }
 
 .box-descricao-equipe .titulo-descricao-equipe h2 {
@@ -739,7 +741,7 @@ main .containers {
   z-index: 1;
 }
 
-.botao-mais {
+.icon-capelo {
   width: 65px;
   height: 65px;
   border-radius: 50%;
@@ -756,7 +758,7 @@ main .containers {
   transition: .3s ease;
 }
 
-.botao-mais:hover {
+.icon-capelo:hover {
   background-color: var(--primary-color);
   color: #fff;
   border: 3px solid #fff;
@@ -889,14 +891,20 @@ main .containers {
     margin-bottom: 10rem;
 }
 
-.apoiadores .box-icons-apoio {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+.box-icons-apoio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .box-icons-apoio img {
-  width: 12rem;
+  max-width: 12rem;
+  height: auto;
+  flex: 1 1 auto;
+  object-fit: contain;
   transition: 0.4s ease;
 }
 
